--- a/style.css
+++ b/style.css
@@ -643,7 +643,7 @@ a{
 	display: block;
 	color: rgb(232, 55, 55);
 	font-size: 14px;
-	text-transform: uppercase;
+	text-transform: capitalize;
 	font-weight: 700;
 }
 .post-title {
@@ -1036,34 +1036,6 @@ a{
 	margin-left: 10px;
 	letter-spacing: 1px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
